<resources>
    <string name="app_name">FinalMyPhrasalVerbsProject</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="favorites">   Favorites   </string>
    <string name="description">Description</string>
    <string name="lesson">Lesson</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="title_search">title_search</string>
    <string name="title_profile">title_profile</string>
    <string name="title_favorite">title_favorite</string>
    <string name="phrasal_verbs">Phrasal Verbs</string>
    <string name="searchh">Search</string>
    <string name="dictionary">  Dictionary  </string>
    <string name="more">More</string>
    <string name="verb_name">Verb Name</string>
    <string name="words">words</string>
    <string name="means">means</string>
    <string name="learn">Learn</string>
    <string name="verbs">Verbs</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="verb_description">Verb Description</string>
    <string name="sentence_1">sentence_1</string>
    <string name="facebook">facebook</string>
    <string name="welcome_to_phrasal_verbs">Welcome to Phrasal Verbs</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="password_again">Password Again</string>
    <string name="s_gn_up">Sıgn up</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account? |</string>
</resources>