<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/id_userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/user_name"
        android:paddingStart="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/light_brown"
        android:paddingTop="10dp"
        tools:ignore="MissingConstraints,RtlSymmetry" />
    <EditText
        android:id="@+id/id_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintHorizontal_bias=".5"
        android:textColor="@color/light_brown"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        tools:ignore="MissingConstraints,RtlSymmetry" />


    <EditText
        android:id="@+id/id_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/light_brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintVertical_bias=".4"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/id_passwordAgain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/light_brown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintVertical_bias=".5"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/password_again"
        android:paddingStart="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/s_gn_up"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".6"
        app:layout_constraintWidth_percent=".9"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/light_brown"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.07" />

</androidx.constraintlayout.widget.ConstraintLayout>