<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/id_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/id_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintVertical_bias=".4"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".6"
        app:layout_constraintWidth_percent=".9"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/id_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/id_password"
        app:layout_constraintTop_toBottomOf="@+id/id_password"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>