<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Login_SignupActivity">

    <ImageView
        android:id="@+id/img_phrasal"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/pvuc"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/backgroundTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_phrasal_verbs"
        android:textColor="@color/light_brown"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/backgroundTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_phrasal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".80"
        app:layout_constraintVertical_bias="1"
        android:background="@drawable/vie_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/vie_by"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="68dp"
            tools:ignore="MissingConstraints">

        </androidx.viewpager.widget.ViewPager>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_log_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:elevation="10dp"
        android:padding="10dp"
        app:tabTextColor="@color/blue"
        app:tabRippleColor="@color/orange"
        app:tabSelectedTextColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundTop">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />
    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:contentDescription="@string/facebook"
        android:elevation="35dp"
        android:src="@drawable/search"
        app:elevation="35dp"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:contentDescription="@string/facebook"
        android:elevation="35dp"
        android:src="@drawable/facebookk"
        app:elevation="35dp"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:contentDescription="@string/facebook"
        android:elevation="35dp"
        android:src="@drawable/example_img"
        app:elevation="35dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>