<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".WordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        android:background="@drawable/card2_background">

        <TextView
            android:id="@+id/txt_word_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/words"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_word_name">

            <TextView
                android:id="@+id/txt_word_means"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="218dp"
                android:text="@string/means"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_word_sentence_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="218dp"
                android:text="@string/sentence_1"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/txt_word_sentence_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="218dp"
                android:text="@string/sentence_1"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/txt_word_sentence_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="218dp"
                android:text="@string/sentence_1"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/img_example_word"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="431dp"
                android:src="@drawable/example_img" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>